# lpc55-rust-sandbox

./: .gitignore  .gitmodules  Readme.md  lpc55s28.svd
.devcontainer/: Dockerfile  devcontainer.json
rtic-app/: Cargo.toml
rtic-app/src/: main.rs
