[package]
name = "rtic-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc55-hal="*"
embedded-hal = { version = "0.2", features = ["unproven"] }
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "1.0"
cortex-m-semihosting = "0.3"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-halt  = "0.2"
panic-semihosting = { version = "0.5", features = ["jlink-quirks"] }
systick-monotonic = "*"
ssd1306 = "0.3"
switch-hal = "*"
